Various Code cleanups and unused code removed.
Change-Id: I913da094281dfda315d6cc66337deb05564762c1
Reviewed-on: https://git.eclipse.org/r/13701
Tested-by: Hudson CI
Reviewed-by: Matthias Villiger <mvi@bsiag.com>
IP-Clean: Matthias Villiger <mvi@bsiag.com>